# firecrawl-cli

./: .gitignore  README.md  pyproject.toml
docs/: batch_scrape.md  crawl.md  fast_scrape.md  map.md  scape.md
docs/plans/: 2025-10-14-firecrawl-cli.md
src/firecrawl_cli/: __init__.py  cli.py  utils.py
src/firecrawl_cli/commands/: batch.py  crawl.py  map.py  scrape.py
tests/: test_batch.py  test_crawl.py  test_integration.py  test_map.py  test_scrape.py  test_utils.py
