[project]
name = "firecrawl-cli"
version = "0.1.0"
description = "CLI tool for Firecrawl API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "firecrawl-py>=1.0.0",
    "typer>=0.12.0",
]

[project.scripts]
firecrawl = "firecrawl_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=6.0.0",
]
