[project]
name = "firecrawl-cli"
version = "0.1.0"
description = "CLI tool for Firecrawl API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "firecrawl-py==4.20.0",
    "typer==0.24.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
]

[project.scripts]
firecrawl = "firecrawl_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
]
